--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
                         <tr>
                             <td><p> Скорость воздуха <input asp-for="MoveAir" type="number" size="2" name="mc" min="1.5" max="3" value="1.5" step="0.5"></p></td>
                             <td>
-                                <select asp-for="EndDamp" type="text" name="domainCirculation">
+                                <select asp-for="domainCirculation" type="text" name="domainCirculation">
                                     <option>Реверсивная</option>
                                     <option>Нереверсивная</option>
                                 </select>
