Выполнен перенос проекта

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,16 +11,16 @@
     <hr />
     <section class="container">
         <div class="row">
-            <form method="post">
+            <form method="post" asp-action="Calculation">
                 <div class="col-12 text-center">
                     <table style="width:1200px; margin: auto">
                         <tr>
-                            <td><p> Начальная <input asp-for="StartDamp" type="number" size="2" name="start" min="25" max="120" value="60"></p></td>
-                            <td><p> Конечная <input asp-for="EndDamp" type="number" size="2" name="end" min="6" max="22" value="16"></p></td>
+                            <td><p> Начальная <input asp-for="StartDamp" type="number" size="2" name="startDamp" min="25" max="120" value="60"></p></td>
+                            <td><p> Конечная <input asp-for="EndDamp" type="number" size="2" name="endDamp" min="6" max="22" value="16"></p></td>
                         </tr>
                         <tr>
                             <td>
-                                <select asp-for="S1" name="S1">
+                                <select asp-for="S1" name="s1">
                                     <option>22</option>
                                     <option>25</option>
                                     <option>32</option>
@@ -29,7 +29,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select asp-for="S2" name="S2">
+                                <select asp-for="S2" name="s2">
                                     <option>75</option>
                                     <option>100</option>
                                     <option>125</option>
@@ -42,14 +42,14 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><p> Скорость воздуха <input asp-for="MoveAir" type="number" size="2" name="mc" min="1.5" max="3" value="1.5" step="0.5"></p></td>
+                            <td><p> Скорость воздуха <input asp-for="MoveAir" type="number" size="2" name="moveAir" min="1.5" max="3" value="1.5" step="0.5"></p></td>
                             <td>
                                 <select asp-for="domainCirculation" type="text" name="domainCirculation">
                                     <option>Реверсивная</option>
                                     <option>Нереверсивная</option>
                                 </select>
                             </td>
-                            <td><p> Ширина штабеля <input asp-for="numericStacks" type="number" size="2" name="sht" min="0.5" max="3" value="3" step="0.5"></p></td>
+                            <td><p> Ширина штабеля <input asp-for="numericStacks" type="number" size="2" name="numericStacks" min="0.5" max="3" value="3" step="0.5"></p></td>
                         </tr>
                     </table>
 
@@ -63,15 +63,15 @@
                             <td>
                                 <p>
                                     tc, C
-                                    <select asp-for="Tc1" name="S2">
+                                    <select asp-for="Tc1" name="tc1">
                                         <option>60</option>
                                         <option>65</option>
-                                        <option>75</option>
+                                        <option>70</option>
                                     </select>
                                 </p>
                             </td>
                             <td>
-                                <p>dt,C <input asp-for="DtC1" type="number" size="2" name="mc" min="3" max="9" value="8"></p>
+                                <p>dt,C <input asp-for="DtC1" type="number" size="2" name="dtc1" min="3" max="9" value="8"></p>
                             </td>
                         </tr>
                         <tr>
@@ -79,16 +79,16 @@
                             <td>
                                 <p>
                                     tc, C
-                                    <select asp-for="Tc2" name="S2">
-                                        <option>60</option>
+                                    <select asp-for="Tc2" name="tc2">
                                         <option>65</option>
+                                        <option>70</option>
                                         <option>75</option>
                                     </select>
                                 </p>
 
                             </td>
                             <td>
-                                <p>dt,C <input asp-for="DtC2" type="number" size="2" name="mc" min="7" max="15" value="15" /></p>
+                                <p>dt,C <input asp-for="DtC2" type="number" size="2" name="dtc2" min="7" max="15" value="15" /></p>
                             </td>
                         </tr>
                         <tr>
@@ -96,19 +96,19 @@
                             <td>
                                 <p>
                                     tc, C
-                                    <select asp-for="Tc3" name="S2">
+                                    <select asp-for="Tc3" name="tc3">
                                         <option>70</option>
                                         <option>75</option>
                                     </select>
                                 </p>
                             </td>
                             <td>
-                                <p>dt,C   <input asp-for="DtC3" type="number" size="2" name="mc" min="19" max="26" value="25" /></p>
+                                <p>dt,C   <input asp-for="DtC3" type="number" size="2" name="dtc3" min="19" max="26" value="25" /></p>
                             </td>
                         </tr>
                     </table>
                     <div class="form-group text-center">
-                        <input type="submit" class="btn btn-primary" />
+                        <input type="submit" asp-action="Calculation" class="btn btn-primary" />
                     </div>
                 </div>
             </form>
