--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,44 +11,57 @@
     <hr />
     <section class="container">
         <div class="row">
+            <div class="col-12 text-center">
+                <h2>Расчет сушки древесины</h2>
+            </div>
             <form method="post" asp-action="Calculation">
+                <p> Кол-во камер <input asp-for="CamerValue" type="number" size="2" name="CamerValue" min="2" max="20" value="5"> </p>
+
                 <div class="col-12 text-center">
                     <table style="width:1200px; margin: auto">
                         <tr>
                             <td><p> Начальная <input asp-for="StartDamp" type="number" size="2" name="startDamp" min="25" max="120" value="60"></p></td>
-                            <td><p> Конечная <input asp-for="EndDamp" type="number" size="2" name="endDamp" min="6" max="22" value="16"></p></td>
-                        </tr>
-                        <tr>
                             <td>
-                                <select asp-for="S1" name="s1">
-                                    <option>22</option>
-                                    <option>25</option>
-                                    <option>32</option>
-                                    <option>40</option>
-                                    <option>50</option>
-                                </select>
+                                <p>
+                                    S1 =
+                                    <select asp-for="S1" name="s1">
+                                        <option>22</option>
+                                        <option>25</option>
+                                        <option>32</option>
+                                        <option>40</option>
+                                        <option>50</option>
+                                    </select>
+                                </p>
                             </td>
-                            <td>
-                                <select asp-for="S2" name="s2">
-                                    <option>75</option>
-                                    <option>100</option>
-                                    <option>125</option>
-                                    <option>150</option>
-                                    <option>175</option>
-                                    <option>200</option>
-                                    <option>250</option>
-                                    <option>300</option>
-                                </select>
-                            </td>
-                        </tr>
-                        <tr>
                             <td><p> Скорость воздуха <input asp-for="MoveAir" type="number" size="2" name="moveAir" min="1.5" max="3" value="1.5" step="0.5"></p></td>
+                        </tr>
+                        <tr>
+                            <td><p> Конечная <input asp-for="EndDamp" type="number" size="2" name="endDamp" min="6" max="22" value="16"></p></td>
+                            <td>
+                                <p>
+                                    S2 =
+                                    <select asp-for="S2" name="s2">
+                                        <option>75</option>
+                                        <option>100</option>
+                                        <option>125</option>
+                                        <option>150</option>
+                                        <option>175</option>
+                                        <option>200</option>
+                                        <option>250</option>
+                                        <option>300</option>
+                                    </select>
+                                </p>
+                            </td>
                             <td>
                                 <select asp-for="domainCirculation" type="text" name="domainCirculation">
                                     <option>Реверсивная</option>
                                     <option>Нереверсивная</option>
                                 </select>
                             </td>
+                        </tr>
+                        <tr>
+                            <td />
+                            <td />
                             <td><p> Ширина штабеля <input asp-for="numericStacks" type="number" size="2" name="numericStacks" min="0.5" max="3" value="3" step="0.5"></p></td>
                         </tr>
                     </table>
@@ -113,7 +126,7 @@
                 </div>
             </form>
         </div>
-        
+
     </section>
     <nav class="nav nav-pills flex-column flex-sm-row">
         <a asp-controller="Home" asp-action="PrintValue"> Test </a>
