--- a/Views/CalibrateValue/Calculation.cshtml
+++ b/Views/CalibrateValue/Calculation.cshtml
@@ -3,7 +3,6 @@
     ViewData["Title"] = "Calculation";
 }
 
-<h1>Calculation</h1>
 <div>
     <form method="get" asp-action="Index">
         <div class="col-12 text-center">
@@ -13,8 +12,8 @@
                 <thead>
                     <tr>
                         <th>Ступень режима</th>
-                        <th>Влажность древесины Whi</th>
-                        <th>Влажность древесины Wki</th>
+                        <th>Влажность древесины Whi %</th>
+                        <th>Влажность древесины Wki %</th>
                         <th>tc, C</th>
                         <th>tm, C</th>
                         <th>ф</th>
