--- a/Views/CalibrateValue/PrintValue.cshtml
+++ b/Views/CalibrateValue/PrintValue.cshtml
@@ -7,11 +7,11 @@
 	<table class="text-center">
 		<thead>
 			<tr>
-				<th>Кол-во камер</th>
+				<th>Камер шт.</th>
 				<th>Месяц</th>
 				<th>Времени свободного</th>
 				<th>Затрачено</th>
-				<th>Полезность</th>
+				<th>Полезность %</th>
 			</tr>
 		</thead>
 		@foreach (PlanDrying plan in Model)
