--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-	<h3>Учет и планирование сушильного цеха</h3>	
+	<h1>Учет и планирование сушильного цеха</h1>	
 </div>
 <div>
     <hr />
@@ -20,14 +20,73 @@
 				</div>
             </div>
 			<div class="col-12">
-				<div class="col-12">
-					<h3>Создать план на @DateTime.Now.AddMonths(1).ToString("MMMM")</h3>
-				</div>
-				<form method="post" asp-action="Index">
-					<p>
-						Количество камер <input asp-for="CamerValue" type="number" size="2" name="camerValue" min="2" max="20" value="5">
-							<input type="submit" value="Создать" class="c-button-index" />
-					</p>
+				<h1 class="text-center">Технические характеристики камеры</h1>
+				<form method="post" asp-action="Index" class="row">
+					<div class="col-12">
+						<p>
+							<b>Количество камер</b> <input asp-for="CamerValue" type="number" size="2" name="camerValue" min="2" max="20" value="5">
+						</p>
+						<h3 class="text-center">Габариты палета</h3>
+						<table class="text-center" style="width:auto; margin: auto">
+							<tr>
+								<td><label><b>Длинна, м</b> <input asp-for="LengValue" type="number" size="1" name="lengValue" min="3" max="6" value="4" /></label></td>
+							</tr>
+							<tr>
+								<td>
+									<label>
+										<b>Ширина, м</b>
+										<select asp-for="WidthValue" name="widthValue">
+											<option>0,8</option>
+											<option>1,0</option>
+											<option>1,1</option>
+											<option>1,2</option>
+											<option>1,5</option>
+										</select>
+									</label>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<label>
+										<b>Высота, м</b>
+										<select asp-for="HeightValue" name="heightValue">
+											<option>0,8</option>
+											<option>1,0</option>
+											<option>1,1</option>
+											<option>1,2</option>
+											<option>1,5</option>
+										</select>
+									</label>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<label>
+										<b>Теплоноситель</b> <br>
+										<input asp-for="HeatCarrier" type="radio" name="heatCarrier" value="Water" /> Вода <br>
+										<input asp-for="HeatCarrier" type="radio" name="heatCarrier" value="Steam" /> Пар
+									</label>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<label>
+										<b>Температура теплоносителя</b>
+										<select asp-for="TemperatureCarrier" name="temperatureCarrier">
+											<option>90</option>
+											<option>95</option>
+											<option>100</option>
+											<option>105</option>
+										</select>
+									</label>
+								</td>
+							</tr>
+						</table>
+					</div>
+					<div class="col-12">
+						<h3>Создать план на @DateTime.Now.AddMonths(1).ToString("MMMM")  <input type="submit" value="Создать" class="c-button-index" /></h3>
+						
+					</div>
 				</form>
 			</div>
         </div>
