--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -12,7 +12,6 @@ a {
   color: #0366d6;
 }
 
-
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
@@ -28,7 +27,7 @@ a {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 @media (min-width: 768px) {
   html {
@@ -71,7 +70,37 @@ html {
     outline: none;
     box-shadow: 0 0 0 4px #cbd6ee;
 }
+/*Table*/
+.container-table {
+    width: 1300px;
+    margin: auto;
+    padding: 0 15px;
+}
+.mtb-3 {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+.plan-table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid gray;
 
+}
+.plan-table th, .plan-table td {
+    padding: 10px;
+    border: 1px solid grey;
+}
+    .plan-table thead {
+        background-color: #36304a;
+        color: #fff;
+    }
+    .plan-table tbody {
+        background-color: #fff;
+    }
+
+.plan-table td:first-child {
+    width: 10%
+}
 /*Personal settings css*/
 .border-top {
   border-top: 1px solid #e5e5e5;
@@ -97,8 +126,9 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-color: rgb(215 215 215);
 }
 .footer {
   position: absolute;
