--- a/Views/CalibrateValue/AddChambers.cshtml
+++ b/Views/CalibrateValue/AddChambers.cshtml
@@ -1,7 +1,10 @@
 ﻿@model Test.Models.DataBaseViewModel
 @{
-    ViewData["Title"] = "AddChambers";
+	ViewData["Title"] = "AddChambers";
 }
+
+<h1 class="text-center">Расчет продолжительносьт сушки </h1>
+<hr />
 <div>
 	<form method="post" asp-action="Calculation">
 		<div class="col-12 text-center">
