--- a/Views/CalibrateValue/DetailsChamber.cshtml
+++ b/Views/CalibrateValue/DetailsChamber.cshtml
@@ -2,7 +2,8 @@
 @{
 	ViewData["Title"] = "DetailsChamber";
 }
-
+<h1 class="text-center">Расчет продолжительносьт сушки </h1>
+<hr />
 <div>
 	<form method="get" asp-action="Index">
 		@for (int j = 0; j < Model.iteration; j++)
