--- a/Views/CalibrateValue/PrintValue.cshtml
+++ b/Views/CalibrateValue/PrintValue.cshtml
@@ -12,8 +12,8 @@
 			<tr>
 				<th>Камер шт.</th>
 				<th>Месяц</th>
-				<th>Потенциальная загруженность плана, ч</th>
-				<th>Загруженноть плана, ч</th>
+				<th>Потенциальная <br />загруженность плана, ч</th>
+				<th>Фактическая <br />загруженноть плана, ч</th>
 				<th>Полезность %</th>
 			</tr>
 		</thead>
