--- a/Views/CalibrateValue/Calculation.cshtml
+++ b/Views/CalibrateValue/Calculation.cshtml
@@ -3,13 +3,13 @@
 	ViewData["Title"] = "Calculation";
 }
 
-<h1 class="text-center">Расчет продолжительносьт сушки</h1>
+<h1 class="text-center">Расчет продолжительности сушки</h1>
 <hr />
-<div>
+<div >
 	<form method="get" asp-action="Index">
 		<div class="col-12 text-center">
 
-			<table style="width:1200px; margin: auto" border="1">
+			<table class="plan-table container-table" style="width:1200px; margin: auto" border="1">
 				<caption>Таблица значений</caption>
 				<thead>
 					<tr>
