--- a/Views/CalibrateValue/DetailsChamber.cshtml
+++ b/Views/CalibrateValue/DetailsChamber.cshtml
@@ -2,7 +2,7 @@
 @{
 	ViewData["Title"] = "DetailsChamber";
 }
-<h1 class="text-center">Расчет продолжительносьт сушки </h1>
+<h1 class="text-center">Расчет продолжительности сушки </h1>
 <hr />
 <div>
 	<form method="get" asp-action="Index">
