--- a/Views/CalibrateValue/OneDetailsChamber.cshtml
+++ b/Views/CalibrateValue/OneDetailsChamber.cshtml
@@ -3,16 +3,16 @@
 	ViewData["Title"] = "OneDetailsChamber";
 }
 
-<h1 class="text-center">Расчет продолжительность сушки </h1>
+<h1 class="text-center">Расчет продолжительности сушки </h1>
 <h3 class="text-center">@Model.wood -> @Model.s1 x @Model.s2</h3>
 <hr />
 
-<div>
+<div >
 	<form method="get" asp-action="Index">
 		@for (int j = 0; j < Model.iteration; j++)
 		{
-			<div class="col-12 text-center">
-				<table style="width:1200px; margin: auto" border="1">
+			<div class="col-12 text-center container-table">
+				<table class="plan-table" style="width:1200px; margin: auto" border="1">
 					<caption>Таблица значений</caption>
 					<thead>
 						<tr>
