--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-12 text-center">
 				<div class="img-chamber text-center">
-					<img src="~/images/Chamber.png" alt="chamber" style="width:100%;">
+					<img src="~/images/chamber3.jpg" alt="chamber" style="width:100%;">
 					<p class="span-text-img">
 						Сборно-металлические алюминиевые камеры
 					</p>
