--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -121,14 +121,16 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+    
 }
 
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
     background-color: rgb(215 215 215);
+    font-family: 'Open Sans', sans-serif;
 }
 .footer {
   position: absolute;
