--- a/Views/CalibrateValue/Details.cshtml
+++ b/Views/CalibrateValue/Details.cshtml
@@ -28,7 +28,6 @@
 					<tr>
 						<td>
 							<p><b>Камера @i</b></p>
-							@*<a asp-action="DetailsChamber" asp-controller="CalibrateValue" asp-route-id="@i">Подробнее</a>*@
 						</td>
 						@foreach (Chamber prop in Model.chambers)
 						{
@@ -37,7 +36,8 @@
 								<td colspan="@(Math.Ceiling(prop.ChamberHoursSpend / Convert.ToDecimal(24)))">
 									
 									<a asp-action="OneDetailsChamber" asp-controller="CalibrateValue" asp-route-id="@prop.Id">
-										@prop.ChamberWood.TypeWood <br /> @prop.ChamberWood.Value.StartWidth x @prop.ChamberWood.Value.EndWidth x @(prop.PlanDrying.LengValue * 1000) <br/> E = @prop.ChamberCapacity
+										@prop.ChamberWood.TypeWood <br /> @prop.ChamberWood.Value.StartWidth x @prop.ChamberWood.Value.EndWidth
+										x @(prop.PlanDrying.LengValue * 1000) <br/> E = @prop.ChamberCapacity
 									</a>
 								</td>
 
